<resources>
    <string name="app_name">Log Me In</string>

    <string name="title_bar_name">Log Me In</string>

    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_password">Password</string>
    <string name="enter_phone_num">Enter Phone Number</string>
    <string name="enter_email">Email</string>


    <string name="user_Name">User Name</string>

    <!-- BUTTONS -->
    <string name="create_account">Create Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="checkbox">Keep me logged in</string>


    <string name="new_user">New user? Sign Up! It\'s Free!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="r_password">Reset NPassword</string>
    <string name="email">Email</string>
    <string name="button">Login</string>
    <string name="todo">TODO</string>

    <!-- Login page -->
    <string name="login_password_error">Incorrect password</string>
    <string name="login_failed">Login Failed. Email or Password Entered Wrongly</string>

    <!-- Sign up page -->

    <string name="name">Name</string>
    <string name="contact_num">Contact Number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- User Details page -->
    <string name="welcome">WELCOME</string>
    <string name="home_screen">Home</string>
    <string name="edit_profile_screen">Edit profile</string>
    <string name="delete_account_screen">Delete account</string>
    <string name="sign_out">Sign out</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="update">Update</string>
    <string name="update_details">Enter new details</string>
    <string name="confirmation">Confirmation!</string>
    <string name="enter_password_delete">Enter Password</string>


</resources>
