<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_sign_up"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_margin="16dp"
                android:id="@+id/email"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:gravity="center">
            <TextView
                android:layout_margin="8dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_details"
                android:textColor="@color/colorWhite" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/new_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg"
                    android:padding="4dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    tools:targetApi="o" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg"
                    android:padding="4dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    tools:targetApi="o" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/new_contact_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg"
                    android:padding="4dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:maxLength="10"
                    android:maxLines="1"
                    android:hint="@string/contact_num"
                    android:inputType="phone"
                    tools:targetApi="o" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:gravity="center">
            <Button
                android:id="@+id/update_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button_pink"
                android:text="@string/update"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>
