<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="false"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorBlack"
            android:text="@string/confirmation"/>
        <ImageView
            android:id="@+id/dust_bin"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/delete_image"/>
    </LinearLayout>
    <LinearLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:text="@string/enter_password_delete"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_bg"
                android:padding="4dp"
                android:layout_margin="8dp"
                android:autofillHints=""
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                tools:targetApi="o" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="16dp"
        android:gravity="center">
        <Button
            android:layout_margin="8dp"
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_pink"
            android:text="@string/delete_account_screen"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</LinearLayout>