<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="139dp"
            android:layout_margin="16dp"
            android:src="@drawable/welcome_image" />

        <TextView
            android:layout_margin="8dp"
            android:id="@+id/display_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            tools:hint="@string/name" />

        <TextView
            android:layout_margin="8dp"
            android:id="@+id/display_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/email"
            android:textColor="@color/colorWhite" />

        <TextView
            android:layout_margin="8dp"
            android:id="@+id/display_contact_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            tools:hint="@string/contact_num" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/graphic_design" />
    </LinearLayout>


</LinearLayout>
